test and fixed the bugs
